# koppen_mvp

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: python-3.13-rules.mdc
.github/: README.md  SECRETS.md
.github/workflows/: ci-cd.yml
airflow/dags/: forecast_pipeline.py
nginx/: nginx.conf
scripts/: init-airflow-db.sql
src/app/: __init__.py  main.py
src/app/alembic/: env.py
src/app/alembic/versions/: 4509efc461a3_create_users_table.py  923bd7bcc78e_add_wind_energy_models.py  a1b2c3d4e5f6_add_wind_farm_generation_record.py  b2c3d4e5f6g7_add_weather_to_generation_record.py  c3d4e5f6g7h8_add_forecast_tables.py  fdf881ac9ce9_move_location_from_turbine_to_fleet.py
src/app/api/v1/: router.py
src/app/api/v1/endpoints/: auth.py  chat.py  forecasts.py  health.py  locations.py  records.py  synthetic.py  weather.py  wind_farms.py  wind_turbines.py
src/app/core/: config.py  database.py  deps.py  security.py
src/app/models/: __init__.py  forecast.py  user.py  wind_energy_unit.py
src/app/schemas/: __init__.py  auth.py  user.py  weather.py  wind_energy.py
src/app/services/: __init__.py  ai_agent_service.py  forecast_service.py  synthetic_generation.py  turbine_library_service.py  weather_service.py
src/frontend/: Dockerfile  __init__.py  api_client.py  auth.py  components.py  config.py  styles.py  ℹ️_Info.py
src/frontend/.streamlit/: config.toml
src/frontend/assets/: ICONS_README.md
src/frontend/pages/: 1_➕_Create_Farm.py  2_🏭_Manage_Farms.py  3_🌤️_Weather.py  4_📊_Analysis.py  5_🔮_Forecast.py  6_📈_Generation.py  7_🔬_Data_Lab.py  8_💬_AI_Assistant.py  _login.py
