[project]
name = "koppen-mvp"
version = "0.1.0"
description = "Platform for forecasting solar and wind generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Authentication
    "bcrypt>=4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    # Wind power modeling
    "windpowerlib>=0.2.2",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    # Frontend
    "streamlit>=1.40.0",
    "httpx>=0.28.0",
    # AI Agent
    "groq>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI Depends pattern)
    "B904",   # Use `raise from` to specify exception cause (acceptable for some error handling)
    "E741",   # Ambiguous variable name (false positives for single letter vars in some contexts)
    "SIM101", # Combine if statements (sometimes less readable)
    "SIM114", # Combine if statements with same body
    "ARG001", # Unused function argument (required for FastAPI dependency injection)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

